	 z80/{z80.pl,z80_macros.h}: fixes for display timings with the
	 character-accurate renderer.
20041229 display.[ch]: reduce display_is_dirty to being 32-bit again as it's
	 no longer needed for the border. Various other bug fixes, leading
	 to the Overscan demo now looking pretty much perfect :-)
20041229 display.c: get Timex borders working properly again.
20041230 configure.in: improved libao checking (Gergely Szasz).
20041231 ui/gtk/{gtkkeyboard.c,stock.c}: add appropriate header files.
20050102 fuse.c, if1.[ch], settings.dat, utils.c, ui/options.dat: variable
	 length microdrive cartridge handling (rest of patch #1085429)
	 (Gergely Szasz).
20050102 fuse.c: update copyright date to 2005.
20050102 machine.c,periph.c,zxatasp.c,zxcf.c: fix ZXATASP/ZXCF upload/reset
	 behaviour (patch #1094632) (Garry Lancaster).
20050102 machine.c,menu.c,settings.{dat,pl},tape.c,machines/{Makefile.am,
	 machines.h,spec_se.c,tc2048.[ch],tc2068.c,ts2068,c}: add TS2068
	 support (part of patch #1080531) (Fred).
20050102 .cvsignore: add .gdb_history
	 man/fuse.1: add comment about select SDL audio output type
	 sound/osssound.c: add comment about writing frame sized chunks
	 ui/options.dat: shorten "joystick snap prompt" entry
	 (all part of patch #1080531) (Fred).
20050102 ui.c: don't try and set the 'Record movie as PNG' menu item as
	 (in)active if libpng not present.
20050103 if1.c: fdatasync is from the POSIX Realtime Extension, use fsync
         instead.
20050103 screenshot.[ch], ui.c: Further fixes for compiling without libpng.
20050103 rzx.c: Don't enable rollback in compo mode and disble rollback menu
         when playback ends.
20050104 screenshot.[ch]: Undo bogus changes from 20050103.
20050105 sound/sdlsound.c: Use device to select SDL audio driver.
20050105 man/fuse.1: tweak comment about select SDL audio output type.
20050106 man/fuse.1: more hyphen fixups for UTF-8 and an open quote
	 (patch #1096868) (Stuart Brady).